src/objects/All_Fields_Object__c.object
<CustomObject>
    <fields>
        <fullName>AutoNumber__c</fullName>
        <displayFormat>AN-{00000}</displayFormat>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrencyWith2Decimal__c</fullName>
        <label>CurrencyWith2Decimal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateField__c</fullName>
        <label>DateField</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Formula_Field__c</fullName>
        <formula>DateField__c  + 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sub_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_encrypted__c</fullName>
        <label>Text encrypted</label>
        <length>25</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Text_encrypted_all_char__c</fullName>
        <label>Text encrypted all char</label>
        <length>25</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Time_Field__c</fullName>
        <label>Time Field</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>URL_Field__c</fullName>
        <label>URL Field</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>creditcard__c</fullName>
        <label>creditcard</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>geolocation__c</fullName>
        <label>geolocation</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>geolocation_without_decimal__c</fullName>
        <label>geolocation without decimal</label>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>national_isurance__c</fullName>
        <label>national isurance</label>
        <length>25</length>
        <maskChar>asterisk</maskChar>
        <maskType>nino</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>number_with_2_decimal__c</fullName>
        <label>number with 2 decimal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percent__c</fullName>
        <label>percent</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>picklist_multi__c</fullName>
        <label>picklist multi</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Source_Detail</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>socail_security__c</fullName>
        <label>socail security</label>
        <length>25</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>social_insurance__c</fullName>
        <label>social insurance</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>sin</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <label>text</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>text_area__c</fullName>
        <label>text area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>text_area_long__c</fullName>
        <label>text area long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>text_area_rich__c</fullName>
        <label>text area rich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>